--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -5,3 +5,6 @@
 <button (click)="increaseBy()" >+1</button>
 <button (click)="reset()">Reset Counter</button>
 <button (click)="decreaseBy()">-1</button>
+
+<hr>
+<app-counter></app-counter>
