--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -9,10 +9,10 @@
 <dd> {{ age }} </dd>
 
 <td>Método:</td>
-<dd> algún metodo </dd>
+<dd> {{getHeroDescription()}} </dd>
 
 <td>Capitalizado:</td>
-<dd> nombre capitalizado </dd>
+<dd> {{ capitalizedName }} </dd>
 
 <button class="btn btn-primary mx-2">
   Cambiar nombre
