--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -14,12 +14,24 @@
 <td>Capitalizado:</td>
 <dd> {{ capitalizedName }} </dd>
 
-<button (click)="changeHero()" class="btn btn-primary mx-2">
+<button
+*ngIf="name !== 'Spiderman'"
+(click)="changeHero()"
+class="btn btn-primary mx-2">
   Cambiar nombre
 </button>
 
-<button (click)="changeAge()" class="btn btn-primary">
+<button
+*ngIf="age !== 25"
+(click)="changeAge()"
+class="btn btn-primary mx-2">
   Cambiar edad
+</button>
+
+<button
+(click)="resetForm()"
+class="btn btn-primary">
+  Restablecer
 </button>
 
 </dl>
