--- a/02-bases/src/app/heroes/list/list.component.html
+++ b/02-bases/src/app/heroes/list/list.component.html
@@ -1,13 +1,20 @@
 <h3>Listado de Héroes</h3>
 
-<h3>
-  Héroe borrado
-  <small class="text-danger"> XXX </small>
-</h3>
-<h3>No ha borrado nada</h3>
+<div *ngIf="deleteHero; else nothingWasDeleted">
+  <h3>
+    Héroe borrado
+    <small class="text-danger"> {{deleteHero}} </small>
+  </h3>
+</div>
 
+<ng-template #nothingWasDeleted>
+  <h3>No ha borrado nada</h3>
+</ng-template>
 
-<button class="btn btn-outline-danger">
+<button
+*ngIf="heroNames.length > 0"
+  (click)="removeLastHero()"
+  class="btn btn-outline-danger">
   Borrar último héroe
 </button>
 
@@ -15,7 +22,4 @@
   <li *ngFor="let name of heroNames"class="list-group-item">
     {{ name }}
   </li>
-<!-- <li class="list-group-item">Ironman</li>
-<li class="list-group-item">Hulk</li>
-<li class="list-group-item">Thor</li> -->
 </ul>
