--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -3,24 +3,14 @@
 
 <div class="row">
 
+  <!--Mostrar Lista-->
   <div class="col">
-    <h4>Rango de poder</h4>
-    <ul class="list-group">
-      <li class="list-group-item">Krillin - 500</li>
-      <li class="list-group-item">Goku - 10.000</li>
-    </ul>
+    <app-dbz-list></app-dbz-list>
   </div>
 
+  <!--Añadir Personaje-->
   <div class="col">
-    <h4>Agregar personaje</h4>
-    <form class="row">
-      <input type="text" class="form-control mb-2" placeholder="Nombre">
-      <input type="number" class="form-control mb-2" placeholder="Poder">
-
-      <button type="submit" class="btn btn-primary">
-          Agregar
-      </button>
-    </form>
+    <app-add-character></app-add-character>
   </div>
 
 </div>
