--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -5,12 +5,12 @@
 
   <!--Mostrar Lista-->
   <div class="col">
-    <app-dbz-list></app-dbz-list>
+    <dbz-list [characterList]="characters"></dbz-list>
   </div>
 
   <!--Añadir Personaje-->
   <div class="col">
-    <app-add-character></app-add-character>
+    <dbz-add-character></dbz-add-character>
   </div>
 
 </div>
