--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,9 +1,32 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li *ngFor="let character of characterList" class="list-group-item">
+  <li *ngFor="
+    let character of characterList;
+    let i = index;
+    let isFirst = first;
+    let isLast = last;
+    let isEven = even;
+    let isOdd = odd
+  "
+  class="list-group-item">
+    <span class="text-primary">{{ i+1 }}. </span>
+
     <span>{{ character.name }} - </span>
+
     <strong>Power: </strong>
+
     <span>{{ character.power }}</span>
+
+    <span> | Es el primero: {{ isFirst }}</span>
+
+    <span> | Es el último: {{ isLast }}</span>
+
+    <span> | Es el último: {{ isLast }}</span>
+
+    <span> | Es Par: {{ isEven }}</span>
+
+    <span> | Es Impar: {{ isOdd }}</span>
+
   </li>
 </ul>
 
