--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -8,21 +8,25 @@
     let isEven = even;
     let isOdd = odd
   "
-  class="list-group-item"
+  class="list-group-item d-flex justify-content-between align-items-center"
   [ngClass]="{
     'list-group-item-dark': isLast,
     'list-group-item-primary': isEven
   }"
   >
-    <span class="text-primary">{{ i+1 }}. </span>
 
-    <span>{{ character.name }} - </span>
+    <div>
+      <span class="text-primary">{{ i+1 }}. </span>
 
-    <strong>Power: </strong>
+      <span>{{ character.name }} - </span>
 
-    <span>{{ character.power }}</span>
+      <strong>Power: </strong>
 
-    <span> | Es el primero: {{ isFirst }}</span>
+      <span>{{ character.power }}</span>
+    </div>
+
+
+    <!-- <span> | Es el primero: {{ isFirst }}</span>
 
     <span> | Es el último: {{ isLast }}</span>
 
@@ -30,7 +34,9 @@
 
     <span> | Es Par: {{ isEven }}</span>
 
-    <span> | Es Impar: {{ isOdd }}</span>
+    <span> | Es Impar: {{ isOdd }}</span> -->
+
+    <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
 
   </li>
 </ul>
