--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -6,15 +6,15 @@
   <!--Mostrar Lista-->
   <div class="col">
     <dbz-list
-      [characterList]="characters"
-      (onDeleteCharacterID)="onDeleteCharacter($event)"
+      [characterList]="dbzService.characters"
+      (onDeleteCharacterID)="dbzService.onDeleteCharacter($event)"
     >
     </dbz-list>
   </div>
 
   <!--Añadir Personaje-->
   <div class="col">
-    <dbz-add-character (onNewCharacter)="onNewCharacter($event)"></dbz-add-character>
+    <dbz-add-character (onNewCharacter)="dbzService.onNewCharacter($event)"></dbz-add-character>
   </div>
 
 </div>
