70. Resolucion de la Tarea

--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -36,7 +36,7 @@
 
     <span> | Es Impar: {{ isOdd }}</span> -->
 
-    <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
+    <button (click)="onDeleteCharacter( character.id )" class="btn btn-danger">X</button>
 
   </li>
 </ul>
